--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,7 +4,7 @@
   </head>
   <body>
   <form id="login">
-	<input name="name"></input>
+	<input name="user"></input>
 	<input name="pass"></input>
 	<input type="submit" id="loginBtn"></input>
   </form>
@@ -16,7 +16,8 @@
 	<input name="message"></input>
 	<input type="submit" id="postBtn"></input>
   </form>
+  <script src="jquery-3.3.1.js"></script>
   <script src="code.js"></script>
-  <script src="jquery-3.3.1.min.js"></script>
+
   </body>
 </html>
